# Chronoshift

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  appveyor.yml
cmake/modules/: CheckIntrinsics.cmake  FindDirectX.cmake
launcher/: CMakeLists.txt  launcher.cpp
res/: allied.icns  resource.h  resource.rc  soviet.icns
src/: CMakeLists.txt
src/base/: always.h  bittype.h  compiler.h  config.h  config.h.in  debugbreak.h  endiantype.h  gitverinfo.cpp.in  gitverinfo.h  intrinsics.h  macros.h  platform.h  targetver.h  watcomintrin.h
src/game/: alloc.cpp  alloc.h  audio.h  buffer.cpp  fileclass.cpp  fileclass.h  gamedebug.cpp  gamedebug.h  main.cpp  main.h  rawfileclass.cpp  rawfileclass.h  startup.cpp  startup.h  stringex.h
src/game/audio/: adpcm.cpp  adpcm.h  audio.cpp  audio.h
src/game/common/: abs.h  base64.cpp  base64.h  bench.cpp  bench.h  bitarray.cpp  bitarray.h  buffer.cpp  buffer.h  cpudetect.cpp  cpudetect.h  crc.cpp  crc.h  critsection.cpp  critsection.h  dipthong.cpp  dipthong.h  fixed.cpp  fixed.h  fixedmult.h  globals.cpp  globals.h  index.h  ini.cpp  ini.h  language.cpp  language.h  lcw.cpp  lcw.h  listnode.h  memrev.h  minmax.h  noinit.h  nstrdup.h  ostimer.cpp  ostimer.h  pcxrle.cpp  pcxrle.h  random.cpp  random.h  (+20 more)
src/game/crypto/: blowfish.cpp  blowfish.h  int.h  mpmath.cpp  mpmath.h  pk.cpp  pk.h  sha.cpp  sha.h
src/game/debug/: gameassert.cpp  gameassert.h  gamedebug.cpp  gamedebug.h  gamelogging.cpp  gamelogging.h
src/game/engine/: abstract.cpp  abstract.h  abstracttype.cpp  abstracttype.h  action.cpp  action.h  aircraft.cpp  aircraft.h  aircraftdata.cpp  aircraftdata.h  aircrafttype.cpp  aircrafttype.h  anim.cpp  anim.h  animdata.cpp  animdata.h  animtype.cpp  animtype.h  armor.cpp  armor.h  attract.cpp  attract.h  basec.cpp  basec.h  building.cpp  building.h  buildingdata.cpp  buildingdata.h  buildingtype.cpp  buildingtype.h  bullet.cpp  bullet.h  bulletdata.cpp  bulletdata.h  bullettype.cpp  bullettype.h  callback.cpp  callback.h  cargo.cpp  cargo.h  (+244 more)
src/game/gfx/: blitters.cpp  blitters.h  drawshape.cpp  drawshape.h  fading.cpp  fading.h  gbuffer.cpp  gbuffer.h  hsv.cpp  hsv.h  interpolate.cpp  interpolate.h  mouseshape.cpp  mouseshape.h  pal.cpp  pal.h  palette.cpp  palette.h  pcx.cpp  pcx.h  rgb.cpp  rgb.h  shape.cpp  shape.h  surfacemonitor.cpp  surfacemonitor.h  textprint.cpp  textprint.h  tileset.cpp  tileset.h  wsa.cpp  wsa.h
src/game/io/: b64pipe.cpp  b64pipe.h  b64straw.cpp  b64straw.h  basefile.cpp  basefile.h  bfiofile.cpp  bfiofile.h  bfiofileclass.cpp  bfiofileclass.h  blowpipe.cpp  blowpipe.h  blowstraw.cpp  blowstraw.h  buffpipe.cpp  buffpipe.h  buffstraw.cpp  buffstraw.h  ccfileclass.cpp  ccfileclass.h  cd.cpp  cd.h  cdfile.cpp  cdfile.h  cdfileclass.cpp  cdfileclass.h  fileclass.cpp  fileclass.h  filepipe.cpp  filepipe.h  filestraw.cpp  filestraw.h  gamefile.cpp  gamefile.h  lcwpipe.cpp  lcwpipe.h  lcwstraw.cpp  lcwstraw.h  lzopipe.cpp  lzopipe.h  (+28 more)
src/game/memory/: alloc.cpp  alloc.h  newdel.cpp  newdel.h
src/game/net/: commbuff.cpp  commbuff.h  connection.cpp  connection.h  connman.h  field.cpp  field.h  ipx.cpp  ipx.h  ipxaddress.cpp  ipxaddress.h  packet.cpp  packet.h  udp.cpp  udp.h  wsock.cpp  wsock.h
src/game/platform/: eventhandler.cpp  eventhandler.h  excepthandler.cpp  excepthandler.h  initvideo.cpp  initvideo.h  keyboard.cpp  keyboard.h  mouse.cpp  mouse.h  sockets.h  stackdump.cpp  stackdump.h
src/game/ui/: bigcheck.cpp  bigcheck.h  checkbox.cpp  checkbox.h  checklist.cpp  checklist.h  colrlist.cpp  colrlist.h  control.cpp  control.h  controlc.cpp  controlc.h  dial8.cpp  dial8.h  dialog.cpp  dialog.h  droplist.cpp  droplist.h  edit.cpp  edit.h  gadget.cpp  gadget.h  gauge.cpp  gauge.h  link.cpp  link.h  list.cpp  list.h  msgbox.cpp  msgbox.h  musiclist.cpp  musiclist.h  shapebtn.cpp  shapebtn.h  slider.cpp  slider.h  staticbtn.cpp  staticbtn.h  tdroplist.h  textbtn.cpp  (+8 more)
src/game/util/: stringex.h
src/hooker/: dllmain.cpp  hookcrt.h  hooker.cpp  hooker.h  setupglobals.cpp  setuphooks.cpp  setuphooks.h
